set up html pages

--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,7 @@
+/***********************
+GLOBAL STYLES BY MADELINE
+*************************/
+
 body {
   background-color: #252323;
   margin: 0;
@@ -8,3 +12,5 @@ body {
   width: 80%;
   margin: 0 auto;
 }
+
+nav
