--- a/css/main.css
+++ b/css/main.css
@@ -10,8 +10,8 @@ body {
   color: white;
 }
 
-.global-container {
-  width: 80%;
+#global-container {
+  width: 70%;
   margin: 0 auto;
 }
 
@@ -34,19 +34,23 @@ nav ul li a {
 }
 
 header h2 {
-  float: left;
+  /*float: left;*/
 }
 
 /*************
 FOOTER STYLES
 *************/
-
+footer {
+  margin: 0 auto;
+}
 .more-info {
   float: right;
   width: 50%;
+  margin: 0 auto;
 }
 
 .connect_and_info_inner {
   width: 50%;
   float: right;
+  margin: 0 auto;
 }
