--- a/css/main.css
+++ b/css/main.css
@@ -31,6 +31,12 @@ nav ul li a {
   text-decoration: none;
   margin-left: 1%;
   font-size: 1.2em;
+  padding: 1%;
+}
+
+nav a:hover {
+  color: #ddd78f;
+  background-color: black;
 }
 
 header h2 {
@@ -42,6 +48,21 @@ FOOTER STYLES
 *************/
 footer {
   margin: 0 auto;
+  text-align: center;
+}
+
+footer ul {
+  list-style-type: none;
+}
+
+footer ul li a {
+  color: white;
+  text-decoration: none;
+  font-family: Helvetica, sans-serif;
+}
+
+footer a:hover {
+  color: #ddd78f;
 }
 .more-info {
   float: right;
@@ -54,3 +75,13 @@ footer {
   float: right;
   margin: 0 auto;
 }
+
+footer h1 {
+  font-family: "Fjalla One", sans-serif;
+  text-transform: uppercase;
+  font-size: 1.5em;
+}
+
+/**********
+HERO IMAGE
+***********/
