--- a/css/main.css
+++ b/css/main.css
@@ -22,7 +22,9 @@ nav ul li{
 
 nav ul {
   text-align: right;
-  margin-bottom: 0;
+  margin-bottom: 2%;
+  margin-top: -4%;
+  /*float: right;*/
 }
 
 nav ul li a {
@@ -100,11 +102,14 @@ header h2 a {
   color: white;
   text-decoration: none;
   font-size: 2em;
-  float: left;
+  display: inline;
 }
 
 header h2 {
-  float: left;
   margin: 0;
-  padding-bottom: 1%;
+}
+
+.main-content {
+  background-color: black;
+  margin-top: 3%;
 }
